# tufs

./: .gitignore  CMakeLists.txt  DESIGN-DOC.excalidraw  README.md  build-all.sh  build-lib.sh  disk.h
impl/: main.c  main.h
impl/commands/: commands.h  copy_file.c  create_file.c  display_file_contents.c  edit_file.c  file_info.c  filesystem_info.c  list_all_commands.c  list_files.c  mount_disk.c  new.c  new_disk.c  quit_repl.c  remove_file.c  rename_file.c  shell_cmd.c  sync_disc.c  truncate_file.c  unmount_disk.c  write_to_file.c
impl/util/: index_of.c  join.c  parse.c  util.h
impl/util/logging/: logging.c  logging.h
lib/: disk.c  disk.h  libtufs.h  tufsdef.h
lib/disk/: disk.c  disk.h  init_fs.c  mount_fs.c  sync_fs.c  unmount_fs.c
lib/tufsio/: fs_close.c  fs_create.c  fs_delete.c  fs_get_filesize.c  fs_lseek.c  fs_open.c  fs_read.c  fs_rename.c  fs_truncate.c  fs_write.c  tufsio.h
